--- a/src/styles/MatchesList.module.css
+++ b/src/styles/MatchesList.module.css
@@ -1,9 +1,9 @@
 .container {
   display: flex;
-  min-height: 100vh;
+  min-height: 100vh; 
   background: #f9fafb;
   position: relative;
-  padding-top: 4rem;
+  /* padding-top: 4rem; */
 }
 
 .sidebar {
