--- a/src/styles/MobileMenu.module.css
+++ b/src/styles/MobileMenu.module.css
@@ -76,12 +76,12 @@
 /* Floating Close Button */
 .floatingCloseButton {
   position: fixed;
-  bottom: 3rem;
-  right: calc(5% + 1rem);
+  bottom: 10rem;
+  right: 0;
   z-index: 1001;
   width: 3.5rem;
   height: 3.5rem;
-  border-radius: 50%;
+  border-radius: 1em 0 0 1em;
   background: linear-gradient(135deg, #fe8383, #dc2626);
   color: white;
   border: 2px solid white;
